--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+body { 
+	padding-top: 70px; 
+}
+
+.container {
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
 .bgstyle {
 	background-color: #f8f8f8;
 	padding: 20px;
@@ -22,13 +31,57 @@ input {
 	border-radius: 10px;
 	border-style: solid;
 	border-width: 1px;
+	margin-top: 20px;
+	padding: 10px;
+}
+
+input:focus, input:active {
+	outline: none;
+}
+
+.button-style:focus, .button-style:active {
+	outline: none;
 }
 
 .button-style {
 	border-style: none;
+	background-color: white;
+	font-size: 14px;
 }
 
-input[type=submit]:hover {
-     background-position: 0px;
+.button-style-2 {
+	border-style: none;
+	background-color: #222;
+	color: white;
+	font-size: 14px;
+	border-radius: 5px;
+	padding: 6px 15px 6px 15px;
 }
+
+
+.nav-style {
+	border-radius: 0px;
+}
+
+
+.glyphstyle{
+	font-size: 20px;
+}
+
+.glyphstyle2{
+	font-size: 10px;
+}
+
+.container {
+	padding-top: 20px;
+
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+	h1 {
+		font-size: 25px;
+	}
+}
+
+
 
